editing links target attr to _blank

--- a/public/index.html
+++ b/public/index.html
@@ -22,13 +22,13 @@
     </p>
 
     <div id="weatherPara" style="background-color: #EEE; margin: 10px; padding: 10px;">
-      <h4 style="margin-top: 0em; margin-bottom: 10px;">* Weather Data using <span><a href="https://darksky.net/dev/account">Dark Sky API</a></span></h4>
+      <h4 style="margin-top: 0em; margin-bottom: 10px;">* Weather Data using <span><a target="_blank" href="https://darksky.net/dev/account">Dark Sky API</a></span></h4>
       - the weather here is <span id="summary"></span>
       with a temperature of <span id="temperature"></span> &deg; F.
     </div>
 
     <div id="tempPara" style="background-color: #EEE; margin: 10px; padding: 10px;">
-      <h4 style="margin-top: 0em; margin-bottom: 10px;">* Air Quality Data using <span"><a href="https://docs.openaq.org/#api-Latest">open AQ API</a></span></h4>
+      <h4 style="margin-top: 0em; margin-bottom: 10px;">* Air Quality Data using <span"><a target="_blank" href="https://docs.openaq.org/#api-Latest">open AQ API</a></span></h4>
       - The concentration of particulate matter (<span id="aq_parameter"></span>)
       is <span id="aq_value"></span> <span id="aq_units"></span>.  <br> 
       - last read on  <span id="aq_date"></span>
